--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "@react-native-community/netinfo": "^11.3.1",
     "@react-native-firebase/app": "^19.2.2",
     "@react-native-firebase/messaging": "^19.2.2",
-    "@react-native-vector-icons/material-icons": "^0.0.1-alpha.9",
     "@react-navigation/drawer": "^6.6.15",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
@@ -22,6 +21,7 @@
     "formik": "2.1.4",
     "jwt-decode": "3.1.2",
     "link": "^2.1.0",
+    "lucide-react-native": "^0.379.0",
     "moment": "^2.30.1",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
@@ -35,7 +35,6 @@
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.30.1",
     "react-native-svg": "^15.2.0",
-    "react-native-vector-icons": "^10.1.0",
     "react-query": "^3.39.3",
     "react-redux": "^9.1.1",
     "redux": "^5.0.1",
